Fixed an issue with the SQL code responsible for not showing equipment where it would show equipment in certain instances where it should not. Works as intended now.

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -7,3 +7,28 @@
 {
     font-size: smaller;
 }
+
+
+bookingHeader1{
+    font-family: 'Signika', sans-serif;
+    font-size: 75px;
+    color: #000000;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+bookingParagraph1{
+    font-family: 'Inder', sans-serif;
+    font-size: 30px;
+    color: #000000;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+btn-text{
+    font-family: Dubai, serif;
+    font-size: 25px;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
